--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,4 +1,6 @@
 @use "./styles//popup";
+@use "./styles//filter";
+
 
 @tailwind base;
 @tailwind components;
@@ -19,9 +21,42 @@
   --brad-4: 2rem;
 }
 
+.dark-theme {
+  --body-bg: #1e1e1e;
+  --body--bg: #1e1e1e;
+  --events--bg: #262626;
+  --border-color: #363636;
+  --border-color-2: #454545;
+  --color--white: #fff;
+  --box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+  --brad-1: 0.5rem;
+  --brad-2: 1rem;
+  --brad-3: 1.5rem;
+  --brad-4: 2rem;
+}
+
+.light-theme {
+  --header--bg: #fff;
+  --body--bg: #ededed;
+  --events--bg: #f9f9f9;
+  --border-color: #e5e5e5;
+  --border-color-2: #e5e5e5;
+  --color--white: #333;
+  --box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+  --brad-1: 0.5rem;
+  --brad-2: 1rem;
+  --brad-3: 1.5rem;
+  --brad-4: 2rem;
+}
+
 body{
   height: 100vh;
   background-color: var(--body-bg);
+
+  @media screen and (max-width: 700px) {
+    font-size: 90%;
+  }
+
 }
 
 .content{
@@ -31,6 +66,23 @@ body{
 
   display: flex;
   gap: 1.5rem;
+
+  @media screen and (max-width: 895px) {
+    flex-direction: column;
+  }
+
+  .map-content {
+    width: 75%;
+
+    @media screen and (max-width: 1298px) {
+      width: 65%;
+    }
+
+    @media screen and (max-width: 895px) {
+      width: 100%;
+      height: 55%;
+    }
+  }
 }
 
 .map-container{
